--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Colin Holzman",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "electron": "^7.1.5"
+  }
 }
