--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "gui for lora gps tracker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "author": "Colin Holzman",
   "license": "MIT",
