add electron-packager dep

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Colin Holzman",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^7.1.5"
+    "electron": "^7.1.5",
+    "electron-packager": "^14.1.1"
   }
 }
