--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "install": "electron-rebuild"
   },
   "author": "Colin Holzman",
   "license": "MIT",
   "devDependencies": {
     "electron": "^7.1.5",
     "electron-packager": "^14.1.1",
+    "electron-rebuild": "^1.8.8"
+  },
+  "dependencies": {
     "serialport": "^8.0.5"
   }
 }
