--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tracker",
   "version": "1.0.0",
   "description": "gui for lora gps tracker",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
